さらに更新！

--- a/css/style.css
+++ b/css/style.css
@@ -1344,7 +1344,7 @@ header.fixed #g_navi li ul li a {
 	background-image: url(../img/sub_top_company.jpg);
 }
 #sub_top.sample {
-	background-image: url(../img/sub_top_sample.jpg);
+	background-image: url(../image/モバイル_サンプル1.jpg);
 }
 /*
 フッター
@@ -1670,7 +1670,7 @@ header #info {
 	background-image: url(../img/sub_top_company_sp.jpg);
 }
 #sub_top.sample {
-	background-image: url(../img/sub_top_sample_sp.jpg);
+	background-image: url(../image/モバイル_サンプル1.jpg);
 }
 
 
